--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -15,5 +15,10 @@
   <%= @equipment.place.name %>
 </p>
 
+<p>
+  <strong>Divison:</strong>
+  <%= @equipment.division.name %>
+</p>
+
 <%= link_to 'Edit', edit_equipment_path(@equipment) %> |
 <%= link_to 'Back', equipment_index_path %>
