--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -6,7 +6,9 @@
       <th>Name</th>
       <th>Type</th>
       <th>Place</th>
-      <th colspan="3"></th>
+      <th>Division</th>
+      <th>last_update</th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
@@ -16,6 +18,8 @@
         <td><%= equipment.name %></td>
         <td><%= equipment.type.name %></td>
         <td><%= equipment.place.name %></td>
+        <td><%= equipment.division.name %></td>
+        <td><%= equipment.updated_at %></td>
         <td><%= link_to 'Show', equipment %></td>
         <td><%= link_to 'Edit', edit_equipment_path(equipment) %></td>
         <td><%= link_to 'Destroy', equipment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
