naosiwasure wo naosita!

--- a/app/views/inspections/show.html.erb
+++ b/app/views/inspections/show.html.erb
@@ -6,23 +6,23 @@
 </p>
 
 <p>
-  <strong>References:</strong>
-  <%= @inspection.references %>
+  <strong>Equipment:</strong>
+  <%= @inspection.equipment.name %>
 </p>
 
 <p>
-  <strong>References:</strong>
-  <%= @inspection.references %>
+  <strong>Status:</strong>
+  <%= @inspection.status.name %>
+</p>
+<p>
+  <strong>Worker:</strong>
+  <%= @inspection.worker.name %>
 </p>
 
-<p>
-  <strong>References:</strong>
-  <%= @inspection.references %>
-</p>
 
 <p>
-  <strong>References:</strong>
-  <%= @inspection.references %>
+  <strong>Result:</strong>
+  <%= @inspection.result.name %>
 </p>
 
 <p>
