--- a/app/views/inspections/index.html.erb
+++ b/app/views/inspections/index.html.erb
@@ -1,14 +1,14 @@
-<h1>Listing inspections</h1>
+<h1><%= t('views.inspection.index') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Targetyearmonth</th>
-      <th>Equipment</th>
-      <th>Status</th>
-      <th>Worker</th>
-      <th>Ressult</th>
-      <th>Processingdate</th>
+      <th><%= t('activerecord.attributes.inspection.targetyearmonth') %></th>
+      <th><%= t('activerecord.attributes.inspection.equipment_id') %></th>
+      <th><%= t('activerecord.attributes.inspection.status_id') %></th>
+      <th><%= t('activerecord.attributes.inspection.worker_id') %></th>
+      <th><%= t('activerecord.attributes.inspection.result_id') %></th>
+      <th><%= t('activerecord.attributes.inspection.processingdate') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
