日本語化（概ねできたかなぁ）

--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,22 +1,24 @@
+<h1><%= t('views.equipment.show') %></h1>
+
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong><%= t('activerecord.attributes.equipment.name') %>:</strong>
   <%= @equipment.name %>
 </p>
 
 <p>
-  <strong>Type:</strong>
+  <strong><%= t('activerecord.attributes.equipment.type_id') %>:</strong>
   <%= @equipment.type.name %>
 </p>
 
 <p>
-  <strong>Place:</strong>
+  <strong><%= t('activerecord.attributes.equipment.place_id') %>:</strong>
   <%= @equipment.place.name %>
 </p>
 
 <p>
-  <strong>Divison:</strong>
+  <strong><%= t('activerecord.attributes.equipment.division_id') %>:</strong>
   <%= @equipment.division.name %>
 </p>
 
