--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,8 +1,11 @@
+<h1><%= t('views.record.show') %></h1>
+
+
 <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Worker:</strong>
-  <%= @record.worker %>
+  <%= @record.worker.name %>
 </p>
 
 <p>
