--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,13 +1,13 @@
-<h1>Listing equipment</h1>
+<h1><%= t('views.equipment.index') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Place</th>
-      <th>Division</th>
-      <th>last_update</th>
+      <th><%= t('activerecord.attributes.equipment.name') %></th>
+      <th><%= t('activerecord.attributes.equipment.type_id') %></th>
+      <th><%= t('activerecord.attributes.equipment.place_id') %></th>
+      <th><%= t('activerecord.attributes.equipment.division_id') %></th>
+      <th><%= t('activerecord.attributes.equipment.last_update') %></th>
       <th colspan="5"></th>
     </tr>
   </thead>
@@ -20,9 +20,9 @@
         <td><%= equipment.place.name %></td>
         <td><%= equipment.division.name %></td>
         <td><%= equipment.updated_at %></td>
-        <td><%= link_to 'Show', equipment %></td>
-        <td><%= link_to 'Edit', edit_equipment_path(equipment) %></td>
-        <td><%= link_to 'Destroy', equipment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('views.link_to.show'), equipment %></td>
+        <td><%= link_to t('views.link_to.edit'), edit_equipment_path(equipment) %></td>
+        <td><%= link_to t('views.link_to.destroy'), equipment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Equipment', new_equipment_path %>
+<%= link_to link_to t('views.link_to.new'), new_equipment_path %>
