--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing records</h1>
+<h1><%= t('views.record.index') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Worker</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
+      <th><%= t('activerecord.attributes.record.worker_id') %></th>
+      <th><%= t('activerecord.attributes.record.latitude') %></th>
+      <th><%= t('activerecord.attributes.record.longitude') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,12 +13,12 @@
   <tbody>
     <% @records.each do |record| %>
       <tr>
-        <td><%= record.worker %></td>
+        <td><%= record.worker.name %></td>
         <td><%= record.latitude %></td>
         <td><%= record.longitude %></td>
-        <td><%= link_to 'Show', record %></td>
-        <td><%= link_to 'Edit', edit_record_path(record) %></td>
-        <td><%= link_to 'Destroy', record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('views.link_to.show'), record %></td>
+        <td><%= link_to t('views.link_to.edit'), edit_record_path(record) %></td>
+        <td><%= link_to t('views.link_to.destroy'), record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Record', new_record_path %>
+<%= link_to t('views.link_to.new'), new_record_path %>
