--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -11,6 +11,51 @@
     </div>
   <% end %>
 
+<script type="text/javascript">
+  if (navigator.geolocation) {
+
+    // 現在の位置情報を取得
+    navigator.geolocation.getCurrentPosition(
+
+      // （1）位置情報の取得に成功した場合
+      function (pos) {
+        var lat = pos.coords.latitude;
+        var lng = pos.coords.longitude;
+
+        document.getElementById("record_latitude").value = lat;
+        document.getElementById("record_longitude").value = lng;
+        
+        },
+
+      // （2）位置情報の取得に失敗した場合
+      function (error) {
+        var message = "";
+
+        switch (error.code) {
+
+          // 位置情報が取得できない場合
+          case error.POSITION_UNAVAILABLE:
+            message = "a. 位置情報の取得ができませんでした。";
+            break;
+
+          // Geolocationの使用が許可されない場合
+          case error.PERMISSION_DENIED:
+            message = "b. 位置情報取得の使用許可がされませんでした。";
+            break;
+
+          // タイムアウトした場合
+          case error.PERMISSION_DENIED_TIMEOUT:
+            message = "c. 位置情報取得中にタイムアウトしました。";
+            break;
+        }
+        window.alert(message);
+      }
+    );
+  } else {
+    window.alert("d.本ブラウザではGeolocationが使えません");
+  }
+</script>
+
   <div class="field">
     <%= f.label :worker_id %><br>
     <%= f.collection_select( :worker_id, Worker.all, :id, :name ) %>
