--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -18,5 +18,19 @@
   <%= @record.longitude %>
 </p>
 
+<P>
+<div id="map" style='width: 100%;height:400px;'></div>
+</P>
+
+<script type="text/javascript">
+    handler = Gmaps.build('Google');
+    handler.buildMap({ provider: {draggable: false,panControl: false,streetViewControl: false}, internal: {id: 'map'}}, function(){
+      markers = handler.addMarkers(<%=raw @marker.to_json %>);
+      handler.bounds.extendWith(markers);
+      handler.fitMapToBounds();
+	  handler.getMap().setZoom(18);
+    });
+</script>
+
 <%= link_to 'Edit', edit_record_path(@record) %> |
 <%= link_to 'Back', records_path %>
