--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Picture:</strong>
-  <%= @note.picture %>
+  <%= image_tag(@note.picture_url, width: 600) if @note.picture.present? %>
 </p>
 
 <%= link_to 'Edit', edit_note_path(@note) %> |
