kiroku の show で紐づいてる check と measurement と memo も表示するように修正中。

--- a/app/views/kirokus/show.html.erb
+++ b/app/views/kirokus/show.html.erb
@@ -1,20 +1,26 @@
 <h1><%= t('views.kiroku.show') %></h1>
 
-
 <p id="notice"><%= notice %></p>
 
+<%= render 'checks/kiroku_show', check: @kiroku.check %>
+
+<%= render 'measurements/kiroku_show', measurement: @kiroku.measurement %>
+
+<%= render 'notes/kiroku_show', note: @kiroku.note %>
+
+
 <p>
-  <strong>Worker:</strong>
+  <strong><%= t('activerecord.attributes.kiroku.worker_id') %>:</strong>
   <%= @kiroku.worker.name %>
 </p>
 
 <p>
-  <strong>Latitude:</strong>
+  <strong><%= t('activerecord.attributes.kiroku.latitude') %>:</strong>
   <%= @kiroku.latitude %>
 </p>
 
 <p>
-  <strong>Longitude:</strong>
+  <strong><%= t('activerecord.attributes.kiroku.longitude') %>:</strong>
   <%= @kiroku.longitude %>
 </p>
 
