check の 項目(checkresultを参照してるヤツ)の名称を ～_id に変更。 #ちょっとActivRecord に叱られたから。

--- a/app/views/checks/_form_kiroku_show.html.erb
+++ b/app/views/checks/_form_kiroku_show.html.erb
@@ -3,14 +3,14 @@
     <%= f.collection_select( :weather_id, Weather.all, :id, :name )%>
   </div>
   <div class="field">
-    <%= f.label :exterior %><br>
-    <%= f.collection_select( :exterior, Checkresult.all, :id, :name ) %>
+    <%= f.label :exterior_id %><br>
+    <%= f.collection_select( :exterior_id, Checkresult.all, :id, :name ) %>
   </div>
   <div class="field">
-    <%= f.label :tone %><br>
-    <%= f.collection_select( :tone, Checkresult.all, :id, :name ) %>
+    <%= f.label :tone_id %><br>
+    <%= f.collection_select( :tone_id, Checkresult.all, :id, :name ) %>
   </div>
   <div class="field">
-    <%= f.label :stain %><br>
-    <%= f.collection_select( :stain, Checkresult.all, :id, :name ) %>
+    <%= f.label :stain_id %><br>
+    <%= f.collection_select( :stain_id, Checkresult.all, :id, :name ) %>
   </div>
