--- a/app/views/inspections/index.html.erb
+++ b/app/views/inspections/index.html.erb
@@ -22,6 +22,7 @@
         <td><%= inspection.worker.name %></td>
         <td><%= inspection.result.name %></td>
         <td><%= inspection.processingdate %></td>
+        <td><%= link_to t('views.inspection.do_inspecrion'), do_inspection_path(inspection) %></td>
         <td><%= link_to t('views.link_to.show'), inspection %></td>
         <td><%= link_to t('views.link_to.edit'), edit_inspection_path(inspection) %></td>
         <td><%= link_to t('views.link_to.destroy'), inspection, method: :delete, data: { confirm: 'Are you sure?' } %></td>
