コミットし忘れ含めて諸々こみっと。画面遷移関係をちょっと調整など。

--- a/app/views/kirokus/show.html.erb
+++ b/app/views/kirokus/show.html.erb
@@ -37,5 +37,8 @@
     });
 </script>
 
+<%= link_to t('views.inspection.index'), inspections_path %>
+
+<hr>
 <%= link_to 'Edit', edit_kiroku_path(@kiroku) %> |
 <%= link_to 'Back', kirokus_path %>
