inspection の詳細に kiroku の一覧が出るように改造。kiroku に inspection_id 入れ損なってたのに気がついたので入れた。

--- a/app/views/inspections/show.html.erb
+++ b/app/views/inspections/show.html.erb
@@ -1,6 +1,9 @@
 <h1><%= t('views.inspection.show') %></h1>
+<p id="notice"><%= notice %></p>
 
 <%= render 'show', inspection: @inspection %>
+
+<%= render 'kirokus/index', kirokus: @kirokus %>
 
 <hr>
 <%= link_to 'Edit', edit_inspection_path(@inspection) %> |
