--- a/app/views/kirokus/show.html.erb
+++ b/app/views/kirokus/show.html.erb
@@ -8,34 +8,7 @@
 
 <%= render 'notes/kiroku_show', note: @kiroku.note %>
 
-<p>
-  <strong><%= t('activerecord.attributes.kiroku.worker_id') %>:</strong>
-  <%= @kiroku.worker.name %>
-</p>
-
-<p>
-  <strong><%= t('activerecord.attributes.kiroku.latitude') %>:</strong>
-  <%= @kiroku.latitude %>
-</p>
-
-<p>
-  <strong><%= t('activerecord.attributes.kiroku.longitude') %>:</strong>
-  <%= @kiroku.longitude %>
-</p>
-
-<P>
-<div id="map" style='width: 100%;height:400px;'></div>
-</P>
-
-<script type="text/javascript">
-    handler = Gmaps.build('Google');
-    handler.buildMap({ provider: {draggable: false,panControl: false,streetViewControl: false}, internal: {id: 'map'}}, function(){
-      markers = handler.addMarkers(<%=raw @marker.to_json %>);
-      handler.bounds.extendWith(markers);
-      handler.fitMapToBounds();
-	  handler.getMap().setZoom(18);
-    });
-</script>
+<%= render 'show', kiroku: @kiroku %>
 
 <%= link_to t('views.inspection.index'), inspections_path %>
 
