パンくずリストの仕込み完了（gretel利用）

--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Listing divisions</h1>
-
+<% breadcrumb :division_index %>
+<h1><%= t('views.division.index') %></h1>
 <table>
   <thead>
     <tr>
