--- a/app/views/inspections/do_inspection.html.erb
+++ b/app/views/inspections/do_inspection.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :inspection_do_inspection %>
 <h1><%= t('views.inspection.do_inspecrion') %></h1>
 
 <%= render 'show', inspection: @inspection %>
