--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,3 +2,16 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+
+/* extend bootstrap */
+.navbar-kilogy {
+  @extend .navbar-default !optional;
+  background-color: #F6E6B4;
+
+}
+.navbar-brand-small {
+  @extend .navbar-brand !optional;
+  font-size: 90%;
+
+}
