add upload/download for Equipment, Place

--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -32,3 +32,16 @@
 <br>
 
 <%= link_to link_to t('views.link_to.new'), new_equipment_path %>
+
+<br><hr><br>
+
+<p>
+  <%= link_to t('views.link_to.csv_download'), equipment_index_path(format: :csv) %>
+</p>
+
+<p>
+  <%= form_tag import_equipment_index_path, multipart: true do %>
+    <%= file_field_tag :file %>
+    <%= submit_tag t('views.link_to.csv_upload') %>
+  <% end %>
+</p>
