--- a/app/views/menu/show.html.erb
+++ b/app/views/menu/show.html.erb
@@ -11,6 +11,14 @@
 
 
 <hr>
+<h2><%= t('views.menu.show.management_work') %></h2>
+
+<p>
+  <%= link_to t('views.equipment.no_inspection_index'), noinspection_list_path %>
+</p>
+
+
+<hr>
 <h2><%= t('views.menu.show.maintanance_master') %></h2>
 
 <p>
