--- a/app/views/equipment/noInspectionList.html.erb
+++ b/app/views/equipment/noInspectionList.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :equipment_no_inspection_index %>
 <h1><%= t('views.equipment.no_inspection_index') %></h1>
 
 <%= form_tag action='create_inspections' do %>
