--- a/app/views/kirokus/_form_do_inspection.html.erb
+++ b/app/views/kirokus/_form_do_inspection.html.erb
@@ -45,27 +45,52 @@
 
 <%= f.hidden_field :inspection_id %>
 
-<div class="field">
-  <%= f.label :worker_id %><br>
-  <%= f.collection_select( :worker_id, Worker.all, :id, :name ) %>
+<div class="col-md-9 col-sm-9 col-xs-8">
+  <div class="field">
+    <%= f.label :worker_id %><br>
+    <%= f.collection_select( :worker_id, Worker.all, :id, :name ) %>
+  </div>
+  <div class="field">
+    <%= f.label :latitude %><br>
+    <%= f.text_field :latitude %>
+  </div>
+  <div class="field">
+    <%= f.label :longitude %><br>
+    <%= f.text_field :longitude %>
+  </div>
 </div>
-<div class="field">
-  <%= f.label :latitude %><br>
-  <%= f.text_field :latitude %>
+</div> <!-- row -->
+
+<ul class="nav nav-tabs">
+    <li class="active"><a href="#menu1" data-toggle="tab">
+      <%=  t('views.check.check') %></a></li>
+    <li><a href="#menu2" data-toggle="tab">
+      <%=  t('views.measurement.measurement') %>
+    </a></li>
+    <li><a href="#menu3" data-toggle="tab">
+      <%=  t('views.note.note') %>      
+    </a></li>
+</ul>
+
+
+<div class="row">
+    <div class="col-md-12 col-sm-12 col-xs-12">
+    <div class="tab-content">
+      <div class="tab-pane fade in active" id="menu1">
+        <%= f.fields_for :check do |check| %>
+        <%= render 'checks/form_do_inspection', f: check %>
+        <% end %>      
+      </div>
+      <div class="tab-pane fade" id="menu2">
+        <%= f.fields_for :measurement do |measurement| %>
+          <%= render 'measurements/form_do_inspection', f: measurement %>
+        <% end %>
+      </div>
+      <div class="tab-pane fade" id="menu3">
+        <%= f.fields_for :note do |note| %>
+        <%= render 'notes/form_do_inspection', f: note %>
+        <% end %>      
+      </div>
+    </div>
+  </div>
 </div>
-<div class="field">
-  <%= f.label :longitude %><br>
-  <%= f.text_field :longitude %>
-</div>
-
-<%= f.fields_for :check do |check| %>
-<%= render 'checks/form_do_inspection', f: check %>
-<% end %>
-
-<%= f.fields_for :measurement do |measurement| %>
-  <%= render 'measurements/form_do_inspection', f: measurement %>
-<% end %>
-
-<%= f.fields_for :note do |note| %>
-<%= render 'notes/form_do_inspection', f: note %>
-<% end %>
