--- a/app/views/inspections/index.html.erb
+++ b/app/views/inspections/index.html.erb
@@ -10,7 +10,7 @@
       <th><%= t('activerecord.attributes.inspection.worker_id') %></th>
       <th><%= t('activerecord.attributes.inspection.result_id') %></th>
       <th><%= t('activerecord.attributes.inspection.processingdate') %></th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -23,10 +23,30 @@
         <td><%= inspection.worker.name %></td>
         <td><%= inspection.result.name %></td>
         <td><%= inspection.processingdate %></td>
-        <td><%= link_to t('views.inspection.do_inspecrion'), do_inspection_path(inspection) %></td>
-        <td><%= link_to t('views.link_to.show'), inspection %></td>
-        <td><%= link_to t('views.link_to.edit'), edit_inspection_path(inspection) %></td>
-        <td><%= link_to t('views.link_to.destroy'), inspection, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to  do_inspection_path(inspection) do %>
+            <i class="fa fa-pencil fa-fw"></i> 
+            <%= t('views.inspection.do_inspecrion') %>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to  inspection do %>
+            <i class="fa fa-newspaper-o fa-fw"></i> 
+            <%= t('views.link_to.show') %>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to edit_inspection_path(inspection) do %>
+            <i class="fa fa-refresh fa-fw"></i> 
+            <%=  t('views.link_to.edit') %>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to  inspection, method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <i class="fa fa-trash-o fa-fw"></i> 
+            <%= t('views.link_to.destroy') %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
