--- a/app/views/menu/show.html.erb
+++ b/app/views/menu/show.html.erb
@@ -1,40 +1,42 @@
 <% breadcrumb :root %>
 
-<h1><%= t('views.menu.show.title') %></h1>
+<h2><%= t('views.menu.show.title') %></h2>
 
 
-<h2><%= t('views.menu.show.daily_work') %></h2>
+<div class="bs-callout bs-callout-danger">
+    <h4><%= t('views.menu.show.daily_work') %></h4>
+    <p>
+      <%= link_to t('views.inspection.index'), inspections_path %>
+    </p>
+</div>
 
-<p>
-  <%= link_to t('views.inspection.index'), inspections_path %>
-</p>
-
-
-<hr>
-<h2><%= t('views.menu.show.management_work') %></h2>
-
-<p>
-  <%= link_to t('views.equipment.no_inspection_index'), noinspection_list_path %>
-</p>
-
-
-<hr>
-<h2><%= t('views.menu.show.maintanance_master') %></h2>
-
-<p>
-  <%= link_to t('views.equipment.index'), equipment_index_path %>
-</p>
-<p>
-  <%= link_to t('views.place.index'), places_path %>
-</p>
+<div class="bs-callout bs-callout-primary">
+    <h4><%= t('views.menu.show.management_work') %></h4>
+    <p>
+      <%= link_to t('views.equipment.no_inspection_index'), noinspection_list_path %>
+    </p>
+</div>
 
 
-<hr>
-<h2><%= t('views.menu.show.maintanance_sys') %></h2>
+<div class="bs-callout bs-callout-warning">
+  <h4><%= t('views.menu.show.maintanance_master') %></h4>
+  <p>
+    <%= link_to t('views.equipment.index'), equipment_index_path %>
+  </p>
+  <p>
+    <%= link_to t('views.place.index'), places_path %>
+  </p>
+</div>
 
-<p>
-  <%= link_to t('views.worker.index'), workers_path %>
-</p>
-<p>
-  <%= link_to t('views.division.index'), divisions_path %>
-</p>
+<div class="bs-callout bs-callout-default">
+  <h4><%= t('views.menu.show.maintanance_sys') %></h4>
+  <p>
+    <%= link_to t('views.worker.index'), workers_path %>
+  </p>
+  <p>
+    <%= link_to t('views.division.index'), divisions_path %>
+  </p>
+</div>
+
+
+
