toiawase kinou wo  tuketa

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><i class="fa fa-envelope-o fa-fw"></i>お問い合わせ</a></li>
+        <li><a href="/topics"><i class="fa fa-envelope-o fa-fw"></i><%= t('views.menu.topics')%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
