--- a/app/views/comments/_form_topic.html.erb
+++ b/app/views/comments/_form_topic.html.erb
@@ -1,5 +1,6 @@
 <%= form_for(comment) do |f| %>
-<div class="field">
+　　<%= f.hidden_field :topic_id %>
+　　<div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
