--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -4,7 +4,7 @@
 
 <p>
   <strong><%= t('activerecord.attributes.comment.topic_id') %>:</strong>
-  <%= @comment.topic.title %>
+  <%= @comment.topic_id %>
 </p>
 
 <%= link_to 'Edit', edit_comment_path(@comment) %> |
