add password-check for update infomsg

--- a/app/views/infomsgs/_form.html.erb
+++ b/app/views/infomsgs/_form.html.erb
@@ -23,6 +23,12 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+
+  <div class="field">
+    PassWord:<br>
+    <%= text_field :check, :adminpass %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
