--- a/app/views/infomsgs/show.html.erb
+++ b/app/views/infomsgs/show.html.erb
@@ -2,6 +2,19 @@
 
 <p id="notice"><%= notice %></p>
 
+  <% if @infomsg.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@infomsg.errors.count, "error") %> prohibited this infomsg from being saved:</h2>
+
+      <ul>
+      <% @infomsg.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
 <p>
   <strong><%= t('activerecord.attributes.infomsg.effective_date') %>:</strong>
   <%= @infomsg.effective_date %>
