--- a/app/views/inspections/done_inspection.html.erb
+++ b/app/views/inspections/done_inspection.html.erb
@@ -48,6 +48,7 @@
 <% end %>
 <hr>
 
+<%= t('activerecord.attributes.approval.signature') %><br />
 <%= form_tag action='close_inspection' do %>
   <div>
     <script type="text/javascript" src="./libs/fabric.js"></script>
