currentDate, currentMonth wo hyo-ji

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,12 @@
 
       </ul>
 
+
       <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav">
+          <li class="navbar-brand-small"><%= t('views.navbar.currentDate') %>:<%= @currentDate  %> </li>
+          <li class="navbar-brand-small"><%= t('views.navbar.currentMonth') %>:<%= @currentMonth  %> </li>
+        </ul>
         <li><a href="/topics"><i class="fa fa-envelope-o fa-fw"></i><%= t('views.menu.topics')%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
