#73 : text hyouji de kaigyou sareru yo-ni

--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -5,6 +5,6 @@
 
 <p>
   <strong><%= t('activerecord.attributes.comment.description') %>:</strong>
-  <%= comment.description %>
+  <%= simple_format(comment.description) %>
 </p>
 
