--- a/app/views/notes/_kiroku_show.html.erb
+++ b/app/views/notes/_kiroku_show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong><%= t('activerecord.attributes.note.memo') %>:</strong>
-  <%= note.memo %>
+  <%= simple_format(note.memo) %>
 </p>
 
 <p>
