--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -14,7 +14,7 @@
 
 <p>
   <strong><%= t('activerecord.attributes.topic.description') %>:</strong>
-  <%= @topic.description %>
+  <%= simple_format(@topic.description) %>
 </p>
 
 <p>
