topic/show ページのタイムスタンプが flag のものになっている不具合修正

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -24,12 +24,12 @@
 
 <p>
   <strong><%= t('activerecord.attributes.topic.created_at') %>:</strong>
-  <%= @topic.flag.created_at %>
+  <%= @topic.created_at %>
 </p>
 
 <p>
   <strong><%= t('activerecord.attributes.topic.updated_at') %>:</strong>
-  <%= @topic.flag.updated_at %>
+  <%= @topic.updated_at %>
 </p>
 
 <hr>
