記録の更新画面(kirokus/edit)の緯度経度を読み込み専用にする

--- a/app/views/kirokus/_form.html.erb
+++ b/app/views/kirokus/_form.html.erb
@@ -24,7 +24,7 @@
 
         document.getElementById("kiroku_latitude").value = lat;
         document.getElementById("kiroku_longitude").value = lng;
-        
+
         },
 
       // （2）位置情報の取得に失敗した場合
@@ -62,11 +62,11 @@
   </div>
   <div class="field">
     <%= f.label :latitude %><br>
-    <%= f.text_field :latitude %>
+    <%= f.text_field :latitude, readonly: true %>
   </div>
   <div class="field">
     <%= f.label :longitude %><br>
-    <%= f.text_field :longitude %>
+    <%= f.text_field :longitude, readonly: true %>
   </div>
   <div class="actions">
     <%= f.submit %>
